# At-RTOS

./: .clang-format  @-EC.url  At-RTOS.url  Build.ps1  CMakeLists.txt  LICENSE  README.md  README.txt  at_rtos.h  basic.c  build.cmd  build_version.h  clock_systick.c  event.c  idle.c  kernal.c  kernal_idle.c  kernal_version.h  list.c  mutex.c  os_config.h  package.json  queue.c  release-note.md  release_note.md  semaphore.c  svc_call.h  thread.c  timer.c  trace.c
.github/: Welcome_PRs.md
.github/remote_build/: README.md
.github/remote_build/native_gcc/: CMakeLists.txt  main.c
.github/samples/kernal_sample/: CMakeLists.txt
.github/script/: BuildScript.ps1  auto-version.cmd  auto-version.ps1
.github/workflows/: auto-version.yml  auto_version.yml  clang-format.yml  firmware-release.yml  first-interaction.yml  kernal-build.yml  kernal-cmake.yml  kernal-sample.yml  kernal_sample.yml  pure_cmake.yml  test.yml  trigger-version-release.yml
arch/: CMakeLists.txt  README.md  arch.h
arch/arch32/arm/cmsis/include/: cmsis_compiler.h
clock/: CMakeLists.txt  clock_native_gcc.c  clock_sample.c  clock_systick.c
github/pure_cmake/: main.c
include/: CMakeLists.txt  arch.h  at_rtos.h  atos_configuration.h  basic.h  clock_systick.h  clock_tick.h  compiler.h  configuration.h  event.h  k_config.h  k_linker.h  k_malloc.h  k_struct.h  k_trace.h  k_type.h  kernal.h  kernel.h  kstruct.h  ktype.h  linker.h  member_struct.h  mutex.h  port.h  postcode.h  queue.h  rtos_configuration.h  sched_kernel.h  sched_timer.h  semaphore.h  static_init.h  thread.h  timer.h  trace.h  type.h
include/arch/: arch.h  k_arch.h
include/clock/: k_clock_tick.h
include/kernal/: at_rtos.h  compiler.h  configuration.h  event.h  kernal.h  kstruct.h  kthread.h  ktype.h  linker.h  list.h  mutex.h  pool.h  postcode.h  queue.h  semaphore.h  thread.h  timer.h  trace.h  type.h  typedef.h  unique.h
include/kernal_sample/: atos_configuration.h
include/kernel/: at_rtos.h  compiler.h  configuration.h  event.h  init.h  kernel.h  kstruct.h  kthread.h  ktype.h  linker.h  list.h  mutex.h  pool.h  postcode.h  queue.h  semaphore.h  thread.h  timer.h  trace.h  type_def.h  typedef.h
include/port/: k_port.h  port.h
include/template/: atos_configuration.h  os_config.h
include/template/native_gcc/: atos_configuration.h
kernal/: CMakeLists.txt  at_rtos.h  basic.c  event.c  kernal.c  kernal_thread.c  kthread.c  linker.c  list.c  mutex.c  pool.c  postcode.c  queue.c  semaphore.c  thread.c  timer.c  trace.c
kernal/include/: at_rtos.h  atos_version.h  basic.h  compiler.h  configuration.h  idle.h  kernal.h  kernal_thread.h  linker.h  member_struct.h  postcode.h  semaphore.h  svc_call.h  thread.h  trace.h  type.h  unique.h
kernal/include/arch32/: arch.h
kernal/port/: port_gcc.c
kernel/: CMakeLists.txt  basic.c  event.c  init.c  kernel.c  kthread.c  linker.c  list.c  mutex.c  pool.c  postcode.c  queue.c  semaphore.c  subscribe.c  thread.c  timer.c  trace.c
port/: CMakeLists.txt  port.c  port_common.c  port_iar.s  port_keil.c  port_keil_ac5.c  port_keil_ac6.c  port_native_gcc.c  port_sample.c
port/include/: port.h
samples/: README.md
samples/cmake_test/: CMakeLists.txt  main.c
samples/kernal_sample/: CMakeLists.txt  main.c
samples/pure_cmake/: CMakeLists.txt
script/: auto-version.ps1  version.ps1
source/: CMakeLists.txt  event.c  k_linker.c  k_malloc.c  k_thread.c  k_trace.c  kernel.c  kthread.c  linker.c  mem_pool.c  msg_queue.c  msg_subscribe.c  mutex.c  pool.c  queue.c  sched_kernel.c  sched_thread.c  sched_timer.c  semaphore.c  static_init.c  subscribe.c  sync_event.c  sync_mutex.c  sync_semaphore.c  thread.c  timer.c  trace.c
source/clock/: CMakeLists.txt  clock_native_gcc.c  clock_systick.c  k_clock_native_gcc.c  k_clock_systick.c
source/port/: CMakeLists.txt  k_port_common.c  k_port_keil_ac5.c  k_port_keil_ac6.c  k_port_native_gcc.c  port_common.c  port_keil_ac5.c  port_keil_ac6.c  port_native_gcc.c
src/: clock_systick.c  event.c  linker.c  mutex.c  timer.c  trace.c
src/inc/: kernal.h  list.h  queue.h  timer.h  type.h
